--- a/App/src/components/ArticleList/ArticleList.module.scss
+++ b/App/src/components/ArticleList/ArticleList.module.scss
@@ -23,6 +23,7 @@
         img{
             width: 100%;
             max-height: 200px;
+            border: solid 0.5px grey;
         }
     }
     .Text{
